feature: add stormstrooper

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <main>
 
       <header>
-        <h1>Jeff Delaney</h1>
-        <p>🚀 Welcome to my website!</p>
+        <h1>Tiago C. Santos</h1>
+        <p>🚀 Bem vindo ao meu Website!</p>
       </header>
 
 
       <blockquote>
-        <p>I like making stuff and putting it on the internet</p>
+        <p>Eu gosto de tech stuff e projetos empreendedores</p>
       </blockquote>
 
       <section>
@@ -39,7 +39,7 @@
       </section>
 
       <section class="light">
-        <h2>👩🏽‍🚀 Projects</h2>
+        <h2>👩🏽‍🚀 Projetos</h2>
 
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
@@ -58,25 +58,22 @@
       </blockquote>
 
       <section class="left">
-        <h2>🌮 Work History</h2>
+        <h2>🌮 Experiências</h2>
 
-        <h3>McDonalds</h3>
+        <h3>CTO na Ayo</h3>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-        <h3>Burger King</h3>
+          Ayo é um app fácil e prático para agendar viagens intermunicipais, disponível 24 horas por dia. Você não precisa perder tempo e paciência, enquanto espera por um ônibus ou táxi convencional. Com apenas alguns clicks, a Ayo agenda sua viagem. O pagamento é fácil e rápido. Com cartão de crédito ou em dinheiro. Estamos disponíveis em algumas cidades.        </p>
+        <h3>Desenvolvedor Mobile - Ma9 - soluções em tecnologia</h3>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-        <h3>Taco Bell</h3>
+          Empresa especializada em  softwares na área financeira e de seguros. Com uma equipe coesa e capacitada, desenvolvemos softwares direcionados para o mercado financeiro, com soluções adaptáveis e pontuais.        </p>
+        <h3>Desenvolvedor FullStack - iAcordo</h3>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
+          Uma plataforma (web e app mobile) voltada para resolução de problemas a partir da negociação entre as partes envolvidas, por meio de um canal de mensagens instantâneas.        </p>
 
       </section>
 
       <blockquote>
-        <p>Thanks for watching!</p>
+        <p>Obrigado pela visita!</p>
       </blockquote>
 
 
